--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -29,6 +29,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f9fbd2b",
+   "metadata": {},
+   "source": [
+    "**Descripción del dataset**\n",
+    "Los datos provienen de registros históricos de la actividad solar. En este caso, se está utilizando específicamente el número de manchas solares observadas anualmente desde el año 1700 hasta el 2009.\n",
+    "\n",
+    "Variables:\n",
+    "- Year\n",
+    "    - Tipo: numérico\n",
+    "    - Descripción: año calendario de la observación\n",
+    "- SUNACTIVITY\n",
+    "    - Tipo: numérico\n",
+    "    - Descripción: número anual de manchas solares observadas.\n",
+    "    - Escala: varía desde 0 hasta 200\n",
+    "\n",
+    "En el dataset se logra apreciar un ciclo natural de 11 años de subidas y bajadas en la actividad solar. La columna de SUNACTIVITY debe ser normalizada antes de poder trabajar con ella."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "25da57f7",
@@ -366,7 +386,31 @@
     "\n",
     "\n",
     "**Tiempo de entrenamiento y estabilidad de error**\n",
+    "\n",
     "Con una ventana pequeña, el entrenamiento es rápido y estable, se llega pronto a una convergencia, pero tiene una menor capacidad de modular la estuctura global. Por otro lado, con una ventana mediana el tiempo de entrenamiento es un poco más tardado, pero tampoco es mucha diferencia. Además, el error desciende de forma consistente hasta estabilizarse en el nivel más bajo. Esto lo convierte en el más eficiente. Con una ventana grande, el entrenamiento es más lento, ya que cada batch debe procesar más pasos. Además, el error es más alto que los otros dos y mientras más pasa el tiempo, más parece estancarse en un punto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54b08fab",
+   "metadata": {},
+   "source": [
+    "**Relación de resultados con la teoría de *vanishing* y *exploding gradient***\n",
+    "\n",
+    "En las RNNs, el entrenamiento se basa en back propagation. Cuando la secuencia es muy larga, como pasa con las ventanas grandes de 100 pasos, los gradientes se multiplican repetidamente por los pesos en cada paso temporal. \n",
+    "Si los valores son menores a 1, los gradientes tienden a cero, como con el *vanishing gradient*. Esto impide que el modelo aprenda dependencias de largo plazo. Esto explica por qué con ventanas grandes, el error se queda extancado, pues no logra transmitir información útil desde los primeros pasos de la secuencia hasta el final.\n",
+    "En el caso contrario, si los valores fueran mayores a 1, se crearian oscilaciones inestables y pérdidas que divergen, causadas por una *exploding gradient*. En este caso no se logró observar algo así, probablemente debido a la configuración inicial de pesos y la tasa de aprendizaje del modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de431bb4",
+   "metadata": {},
+   "source": [
+    "**Conclusiones**\n",
+    "- El *vanishing gradient* limita la capacidad de las RNN simples para aprender patrones que requieren memoria a largo plazo, como los ciclos solares de 11 años.\n",
+    "- Ventanas pequeñas pierden contexto y ventanas muy grandes causan gradientes débiles, por lo que se reduce la efectividad del aprendizaje en ambos casos. \n",
+    "- Aumentar la longitud de las ventanas, también incrementa el tiempo de cómputo y no necesariamente mejora el desempeño."
    ]
   }
  ],
