--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "### **Laboratorio 5**\n",
     "- Juan Pablo Solis\n",
-    "- Diego Garcia"
+    "- Diego Garcia\n",
+    "\n",
+    "### **Link de github**\n",
+    "https://github.com/JPS4321/Lab5_Deep-Learning"
    ]
   },
   {
